@@ -1,6 +1,7 @@
 package at.jku.risc.uarau.data;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
 
 public class Function extends Term {
     public final List<Term> arguments;
@@ -23,14 +24,15 @@ public class Function extends Term {
             sb.append(arguments.get(i)).append(",");
         }
         if (!arguments.isEmpty()) {
-            sb.append(arguments.getLast());
+            sb.append(arguments.get(arguments.size() - 1));
         }
-        return STR."\{head}(\{sb.toString()})";
+        return String.format("%s(%s)", head, sb);
     }
     
     @Override
     public boolean equals(Object other) {
-        if (other instanceof Function otherFunction) {
+        if (other instanceof Function) {
+            Function otherFunction = (Function) other;
             // this is okay fast, but could also do pooling for more fast
             if (hashCode() != otherFunction.hashCode()) {
                 return false;
@@ -47,24 +49,5 @@ public class Function extends Term {
         }
         hash = head.hashCode() + 31 * arguments.hashCode();
         return hash;
-    }
-    
-    public void foo(){
-        SequencedSet<String> E = new LinkedHashSet<>();
-        E.add("asdf");
-        E.add("qwer");
-        E.add("zxcv");
-        E.add("tyui");
-        while (!E.isEmpty()) {
-            String a = E.getFirst();
-            Set<String> joined = new HashSet<>();
-            for (String e : E) {
-                if (e.startsWith(a.substring(0, 2))) {
-                    a += e;
-                    joined.add(e);
-                }
-            }
-            E.removeAll(joined);
-        }
     }
 }
